static/rmt/RMT_Infra.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  This template deploys one public and one private EC2 instance based on an AMI for a SUSE Linux
  Enterprise Server OS 12 SP 5. It also includes a security group that allows in
  traffic on port 22 for SSH connections. These instances are placed in
  in public and private subnets, in a VPC that also includes an internet
  gateway, public route table, and route that allow the public EC2 instance to
  connect to the internet.
Parameters:
  KeyPairName:
    Type: String
    Description: Name of the EC2 Key Pair (without the file extension)
  WorkshopInstanceType:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
    Description: 'Enter t2.micro or t2.small, Default: t2.micro.'
  RemoteAccessCIDR:
    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/x
    Description: Allowed CIDR block for external SSH access to the RMT server
    Type: String
Resources:
  LabVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: SUSE Lab VPC
    Metadata:
      cdk_nag:
        rules_to_suppress:
          - id: AwsSolutions-VPC7
            reason: "Demo / Workshop environment, no VPC flow logs necessary."
      cfn_nag:
        rules_to_suppress:
          - id: W60
            reason: "Demo / Workshop environment, no VPC flow logs necessary."
  IGW:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: SUSE Lab IGW
  IGWAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      InternetGatewayId: !Ref IGW
      VpcId: !Ref LabVPC
  PublicSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref LabVPC
      AvailabilityZone: !Select 
        - 0
        - !GetAZs ''
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: SUSE Lab Public Subnet
    Metadata:
      cfn_nag:
        rules_to_suppress:
          - id: W33
            reason: "We need a public subnet with public ip addresses"
  PrivateSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref LabVPC
      AvailabilityZone: !Select 
        - 0
        - !GetAZs ''
      CidrBlock: 10.0.11.0/24
      Tags:
        - Key: Name
          Value: SUSE Lab Private Subnet
  PublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: IGWAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref LabVPC
      Tags:
        - Key: Name
          Value: SUSE Lab Public Route Table
  LabSubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable
  LabSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable SSH from CIDR defined by RemoteAccessCIDR CloudFormation Parameter
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref RemoteAccessCIDR
          Description: Allow incoming SSH traffic from IP address or range defined in RemoteAccessCIDR Parameter
      Tags:
        - Key: Name
          Value: SUSE RMT Security Group
      VpcId: !Ref LabVPC
    Metadata:
      cdk_nag:
        rules_to_suppress:
          - id: CdkNagValidationFailure
            reason: "cdk_nag raise this error because of the CidrIp Ref."
      cfn_nag:
        rules_to_suppress:
          - id: F1000
            reason: "Demo / Workshop environment, not necessary to explicit define outbound rules."
  RMT:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-09e768c053f5736dd
      InstanceType: !Ref WorkshopInstanceType
      SubnetId: !Ref PublicSubnet
      SecurityGroupIds:
        - !Ref LabSecurityGroup
      KeyName: !Ref KeyPairName
      BlockDeviceMappings:
        - DeviceName: /dev/sdm
          Ebs:
            VolumeType: gp2
            DeleteOnTermination: 'true'
            VolumeSize: '30'
      Tags:
        - Key: Name
          Value: SUSE RMT Instance
    Metadata:
      cdk_nag:
        rules_to_suppress:
          - id: AwsSolutions-EC26
            reason: "Demo / Workshop environment, not necessary to encrypt EBS volumes."
          - id: AwsSolutions-EC28
            reason: "Demo / Workshop environment, not necessary to enabled detailed monitoring."
          - id: AwsSolutions-EC29
            reason: "Demo / Workshop environment, not necessary to enabled turn on termination protection."
  PrivateBYOSInstance:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-09e768c053f5736dd
      InstanceType: !Ref WorkshopInstanceType
      SubnetId: !Ref PrivateSubnet
      SecurityGroupIds:
        - !Ref LabSecurityGroup
      KeyName: !Ref KeyPairName
      Tags:
        - Key: Name
          Value: BYOS Private Lab Instance
    Metadata:
      cdk_nag:
        rules_to_suppress:
          - id: AwsSolutions-EC26
            reason: "Demo / Workshop environment, not necessary to encrypt EBS volumes."
          - id: AwsSolutions-EC28
            reason: "Demo / Workshop environment, not necessary to enabled detailed monitoring."
          - id: AwsSolutions-EC29
            reason: "Demo / Workshop environment, not necessary to enabled turn on termination protection."
